[package]
name = "pleme-notifications"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shared notification infrastructure for Pleme services - Discord webhooks, Grafana annotations, and startup reporting"
repository = "https://github.com/pleme-io/pleme-notifications"
homepage = "https://github.com/pleme-io/pleme-notifications"
keywords = ["notifications", "discord", "grafana", "webhooks"]
categories = ["web-programming"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
